# projects__python__morganiser

./: README.md  manage.py  pyproject.toml
core/: urls.py  views.py
docs/: index.md
morganiser/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html  landing-base.html
templates/components/landing/: footer.html  modal.html  navbar.html  page-header.html  theme-selector.html
